# marketing-agent

./: .bedrock_agentcore.yaml  .env-example  .gitignore  Dockerfile  README.md  agentcore_app.py  main.py  pyproject.toml  requirements.txt  start_all.sh  start_backend.py  start_frontend.sh
agents/photographer/: photographer.py  simple_test.py
agents/writer/: __init__.py  simple_test.py  writer.py
backend/: README.md  agent_client.py  main.py
frontend/: README.md  package-lock.json  package.json
frontend/components/: index.ts
frontend/components/forms/: AdvancedOptionsForm.tsx  FormField.tsx  FormRow.tsx  MainForm.tsx  ProductInfoForm.tsx
frontend/components/preview/: ContentPreview.tsx
frontend/components/ui/: Header.tsx  LoadingSpinner.tsx  SubmitButton.tsx  ToggleButton.tsx
frontend/components/upload/: ImageUpload.tsx
frontend/hooks/: useFormData.ts  useWorkflow.ts
frontend/pages/: index.tsx
frontend/styles/: globals.css
frontend/types/: index.ts
prompt/: prompts.py
prompts/: InputPrompt.py
utils/: img_requirement_processor.py
