[project]
name = "agentic-marketers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.39.0",
    "pillow>=11.3.0",
    "strands-agents>=1.9.1",
    "strands-agents-builder>=0.1.10",
    "strands-agents-tools>=0.2.8",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "boto3>=1.35.0",
    "bedrock-agentcore>=0.1.5",
    "bedrock-agentcore-starter-toolkit>=0.1.14",
    "pillow-heif>=1.1.0",
    "fastapi>=0.117.1",
]
